--- a/views/partials/global/aside.handlebars
+++ b/views/partials/global/aside.handlebars
@@ -15,7 +15,7 @@
         	</svg>
         
         	<img src="images/logo.png" alt="." class="hide">
-        	<span class="hidden-folded inline">pulse</span>
+        	<span class="hidden-folded inline">beach week</span>
         </a>
         <!-- / brand -->
       </div>
