--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,36 +6,7 @@
   
   <!-- content -->
   <div id="content" class="app-content white bg box-shadow-z2" role="main">
-    <div class="app-header hidden-lg-up white lt box-shadow-z1">
-        <div class="navbar">
-        <!-- brand -->
-        <a href="index.html" class="navbar-brand md">
-        	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="32" height="32">
-        		<circle cx="24" cy="24" r="24" fill="rgba(255,255,255,0.2)"/>
-        		<circle cx="24" cy="24" r="22" fill="#1c202b" class="brand-color"/>
-        		<circle cx="24" cy="24" r="10" fill="#ffffff"/>
-        		<circle cx="13" cy="13" r="2"  fill="#ffffff" class="brand-animate"/>
-        		<path d="M 14 24 L 24 24 L 14 44 Z" fill="#FFFFFF" />
-        		<circle cx="24" cy="24" r="3" fill="#000000"/>
-        	</svg>
-        
-        	<img src="images/logo.png" alt="." class="hide">
-        	<span class="hidden-folded inline">pulse</span>
-        </a>
-        <!-- / brand -->
-        <!-- nabar right -->
-        <ul class="nav navbar-nav pull-right">
-          <li class="nav-item">
-            <!-- Open side - Naviation on mobile -->
-            <a data-toggle="modal" data-target="#aside" class="nav-link">
-              <i class="material-icons">menu</i>
-            </a>
-            <!-- / -->
-          </li>
-        </ul>
-        <!-- / navbar right -->
-      </div>
-    </div>
+	{{> topHeader}}
     {{> currentlyPlaying}}
     <div class="app-body" id="view">
 
@@ -58,8 +29,8 @@
             </h1>
             {{!-- <p class="item-desc text-ellipsis text-muted" data-ui-toggle-class="text-ellipsis">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quamquam tu hanc copiosiorem etiam soles dicere. Nihil illinc huc pervenit. Verum hoc idem saepe faciamus. Quid ad utilitatem tantae pecuniae? Utram tandem linguam nescio? Sed hoc sane concedamus.</p> --}}
             <div class="item-action m-b">
-              <a href="#" class="btn btn-sm rounded primary">Upload</a>
-              <a href="#" class="btn btn-sm rounded white">Edit Profile</a>
+              {{!-- <a href="#" class="btn btn-sm rounded primary">Upload</a>
+              <a href="#" class="btn btn-sm rounded white">Edit Profile</a> --}}
             </div>
             <div class="block clearfix m-b">
               <span id="liked-song-count">-</span> <span class="text-muted">Songs liked</span>
